<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.blackducksoftware.tools</groupId>
	<artifactId>enterprise-utility-suite</artifactId>
	<version>1.5.6</version>
	<name>Enterprise Utility Suite</name>
	<packaging>jar</packaging>

	<licenses>
		<license>
			<name>GNU General Public License v2.0 only</name>
			<url>http://www.gnu.org/licenses/old-licenses/gpl-2.0-standalone.html</url>
		</license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.resources.sourceEncoding>UTF-8</project.resources.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.14</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.7</version>
		</dependency>
		<dependency>
			<groupId>net.sf.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>com.blackducksoftware.tools</groupId>
			<artifactId>cf-7x-connector</artifactId>
			<version>1.5.2</version>
		</dependency>
		<dependency>
			<!-- This helps avoid a conflict over different xerces library versions 
				used at runtime -->
			<groupId>xerces</groupId>
			<artifactId>xercesImpl</artifactId>
			<version>2.11.0</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<id>copy-libs</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>
								${project.build.directory}/lib
							</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.3.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>assemble</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<platforms>
						<platform>windows</platform>
						<platform>unix</platform>
					</platforms>
					<binFileExtensions>
						<unix>.sh</unix>
					</binFileExtensions>
					<assembleDirectory>${project.build.directory}/deploy</assembleDirectory>
					<repositoryLayout>flat</repositoryLayout>
					<repositoryName>lib</repositoryName>
					<useWildcardClassPath>true</useWildcardClassPath>
					<programs>
						<!-- ADD New Utility Programs here -->
						<program>
							<mainClass>com.blackducksoftware.tools.appadjuster.AppAdjusterUtility</mainClass>
							<name>AppAdjuster</name>
						</program>
						<program>
							<mainClass>com.blackducksoftware.tools.highsev.HighSevHarness</mainClass>
							<name>HighSev</name>
						</program>
						<program>
							<mainClass>com.blackducksoftware.tools.appuseradjuster.add.AddUser</mainClass>
							<name>AddUsers</name>
						</program>
						<program>
							<mainClass>com.blackducksoftware.tools.appuseradjuster.remove.RemoveUsers</mainClass>
							<name>RemoveUsers</name>
						</program>
						<program>
							<mainClass>com.blackducksoftware.tools.capop.CAPopHarness</mainClass>
							<name>CaPopulator</name>
						</program>
						<program>
							<mainClass>com.blackducksoftware.tools.snapshot.SnapshotUtility</mainClass>
							<name>Snapshot</name>
						</program>
						<program>
							<mainClass>com.blackducksoftware.tools.remdataloader.RemDataLoader</mainClass>
							<name>RemDataLoader</name>
						</program>
						<program>
							<mainClass>com.blackducksoftware.tools.teamsync.TeamSync</mainClass>
							<name>TeamSync</name>
						</program>
						<program>
							<mainClass>com.blackducksoftware.tools.teamsync.membership.TeamSyncReport</mainClass>
							<name>UserAccessExtractor</name>
						</program>
					</programs>
					<extraJvmArguments>-Xmx1024m -Xms1024M</extraJvmArguments>
					<configurationDirectory>./properties</configurationDirectory>
					<configurationSourceDirectory>${project.basedir}/src/main/resources</configurationSourceDirectory>
					<copyConfigurationDirectory>true</copyConfigurationDirectory>
					<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
				</configuration>
			</plugin>
			<!-- Generate the zip -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<!-- assemble executable package -->
						<id>assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<descriptors>
								<descriptor>src/main/resources/enterprise_assembly.xml</descriptor>
							</descriptors>
							<descriptorRef>build-zip</descriptorRef>
							<appendAssemblyId>true</appendAssemblyId>
						</configuration>
					</execution>
					<execution>
						<!-- assemble development package -->
						<id>dev</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<descriptors>
								<descriptor>src/main/resources/dev_assembly.xml</descriptor>
							</descriptors>
							<descriptorRef>build-zip</descriptorRef>
							<appendAssemblyId>true</appendAssemblyId>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.7.6.201602180812</version>
				<executions>
					<execution>
						<id>default-prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>default-report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eluder.coveralls</groupId>
				<artifactId>coveralls-maven-plugin</artifactId>
				<version>4.1.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.16</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<argLine>-XX:MaxPermSize=128m -Xms64m -Xmx256m</argLine>
					<includes>
						<include>**/*IT.class</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.3</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<sourcepath>src/main/java</sourcepath>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>jcenter</id>
			<name>JCenter</name>
			<url>http://jcenter.bintray.com</url>
		</repository>
		<repository>
			<id>bds-bintray</id>
			<name>BDS Bintray</name>
			<url>http://dl.bintray.com/bds/tools</url>
		</repository>
		<repository>
			<id>bds-int-public</id>
			<name>BDS Integration</name>
			<url>https://updates.suite.blackducksoftware.com/integrations</url>
		</repository>
	</repositories>

	<!-- Install archives into Black Duck repo -->
	<distributionManagement>
		<repository>
			<id>bds-int-public</id>
			<url>https://updates.suite.blackducksoftware.com/integrations</url>
		</repository>
		<snapshotRepository>
			<id>bds-int-public</id>
			<url>https://updates.suite.blackducksoftware.com/integrations</url>
		</snapshotRepository>
	</distributionManagement>

</project>
